Fixed rounding errors on mobile.
Must be some difference in rendering between Chrome for mobile and desktop because mobile layout was riddled with rounding errors that produced gaps inbetween the elements through which the background would show through - very noticeable.
Fixed by adding 1px negative margins so that elements overlap and rounding errors are therefore no longer visible.

--- a/public_html/css/landscape.css
+++ b/public_html/css/landscape.css
@@ -1,31 +1,34 @@
 #centre-column {
-    width: 62%;
+    width: calc(62% + 1px);
+    /* 4px of the negative margin is to adjust for the whitespace added between
+    all inline elements. The remaining 1px is to make the elements overlap so
+    that rounding errors on mobile cannot be seen. */
+    margin-right: -5px;
+}
+
+#left-column {
+    width: calc(19% + 1px);
+    margin-right: -5px;
+}
+
+#right-column {
+    width: 19%;
 }
 
 .column {
     display: inline-block;
     height: 100%;
-    /* Adjust for whitespace. */
-    margin-right: -4px;
     /* Elements flow normally from the top. */
     /* Default value of 'baseline' caused centre column to render higher than side columns. */
     vertical-align: top;
 }
 
-.side-column {
-    width: 19%;
-}
-
-#logo {
-    max-width: 100%;
-    max-height: 100%;
-    /* Centre in container. */
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
 .link {
+    height: calc(33.33% + 1px);
+    margin-bottom: -1px;
+}
+
+#medium, #twitter {
     height: 33.33%;
+    margin-bottom: 0px;
 }
